--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,7 @@
       "schematics": {
         "@schematics/angular:component": {
           "inlineStyle": true,
-          "inlineTemplate": true
+          "inlineTemplate": false
         }
       },
       "root": "",
